--- a/index.qmd
+++ b/index.qmd
@@ -91,15 +91,15 @@ local({
 local({
   students <-
     c(
-      "Huyen",
-      "Giorgia",
-      "Edward",
-      "Natlia",
-      "Xen",
-      "Janice",
-      "Emily",
-      "Irina",
-      "Deepika"
+      "Inga",
+      "Beyza",
+      "Basia",
+      "Maya",
+      "Na",
+      "Roberta",
+      "Nimisha",
+      "Elena",
+      "Nick"
     )
 
 
@@ -728,7 +728,7 @@ ggplot(data = df,
                stackdir = 'center') +
   labs(x = NULL, 
        y = 'Age') +
-  theme_light(base_size = 15) + 
+  theme_light(base_size = 20) + 
   theme(legend.position = 'none',
         axis.title = element_text(face = 'bold')) 
 ```
