add additional example for boxplot to slides

--- a/index.qmd
+++ b/index.qmd
@@ -783,6 +783,55 @@ ggplot(data = df,
         axis.title = element_text(face = 'bold')) 
 ```
 
+# Another Example
+
+## The Grammar of Graphics {.smaller}
+```{r, echo = T, eval = T, out.width='100%', fig.width=6, fig.height=4}
+#| output-location: column
+#| code-line-numbers: '1'
+ggplot(data = df)
+```
+
+## The Grammar of Graphics {.smaller}
+```{r, echo = T, eval = T, out.width='100%', fig.width=6, fig.height=4}
+#| output-location: column
+#| code-line-numbers: '2'
+ggplot(data = df, 
+       mapping = aes(x = gender, y = age, fill = gender))
+```
+
+## The Grammar of Graphics {.smaller}
+```{r, echo = T, eval = T, out.width='100%', fig.width=6, fig.height=4}
+#| output-location: column
+#| code-line-numbers: '3'
+ggplot(data = df,
+       mapping = aes(x = gender, y = age, fill = gender)) +
+  geom_boxplot(width = .25)
+```
+
+## The Grammar of Graphics {.smaller}
+```{r, echo = T, eval = T, out.width='100%', fig.width=6, fig.height=4}
+#| output-location: column
+#| code-line-numbers: '4'
+ggplot(data = df,
+       mapping = aes(x = gender, y = age, fill = gender)) +
+  geom_boxplot(width = .25) +
+  labs(x = "Gender", y = "Heart Rate")
+```
+
+## The Grammar of Graphics {.smaller}
+```{r, echo = T, eval = T, out.width='100%', fig.width=6, fig.height=4}
+#| output-location: column
+#| code-line-numbers: '5-7'
+ggplot(data = df,
+       mapping = aes(x = gender, y = age, fill = gender)) +
+  geom_boxplot(width = .25) +
+  labs(x = "Gender", y = "Heart Rate") +
+  theme_light(base_size = 15) +
+  theme(legend.position = "none",
+        axis.title = element_text(face = "bold"))
+```
+
 # Resources
 
 ## Website
